# nanoloader

./: LICENSE.txt  README.md
moonbow/: Cargo.toml  README.md
moonbow/moonbow-macros/: Cargo.toml
moonbow/moonbow-macros/src/: lib.rs
moonbow/src/: demisemihosting.rs  main.rs  test.elf
moonbow/src/device/: cortex_m0.rs  demisemihosting.rs  intelhex.rs  mod.rs  peripherals.rs
moonbow/src/peripherals/: cortex_m0.rs  generic.rs  mod.rs
moonbow/test/: device.toml  hello.patched.hex  hello2.up
mspm0cloader/: Cargo.toml  README.md  memory.x
mspm0cloader/src/: lib.rs  main.rs
nanoloader/: Cargo.toml  README.md
nanoloader/src/: lib.rs
nanoloader/src/lz4/: mod.rs
nanoloader/src/lz4/testdata/: datagen.py  lorem1.lz4  lorem2.dct  lorem2.lz4
testloader/: Cargo.toml  build.rs  memory.x
testloader/firmware/: hello.patched.hex
testloader/src/: main.rs
