[package]
name = "moonbow"
version = "0.1.0"
edition = "2024"

[dependencies]
byteorder = "1.5.0"
clap = { version = "4.5.37", features = ["derive"] }
clio = { version = "0.3.5", features = ["clap-parse"] }
elf = "0.7.4"
unicorn-engine = { version = "2.1.3", features = ["arch_aarch64", "arch_arm"], default-features = false }
